force-app/main/default/objects/Hotel_Order__c/Hotel_Order__c.object-meta.xml
<CustomObject>
    <label>Hotel Order</label>
    <nameField>
        <label>Hotel Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>