force-app/main/default/objects/Hotel_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hotel Order</relationshipLabel>
    <relationshipName>Hotel_Order</relationshipName>
    <type>Lookup</type>
</CustomField>