force-app/main/default/objects/Hotel_Order__c/fields/CheckIn_Date__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_Date__c</fullName>
    <label>CheckIn Date</label>
    <type>Date</type>
</CustomField>