force-app/main/default/objects/Hotel_Order__c/fields/CheckOut_Date__c.field-meta.xml
<CustomField>
    <fullName>CheckOut_Date__c</fullName>
    <label>CheckOut Date</label>
    <type>Date</type>
</CustomField>