force-app/main/default/objects/Hotel_Order__c/fields/Expedia_Reference__c.field-meta.xml
<CustomField>
    <fullName>Expedia_Reference__c</fullName>
    <label>Expedia Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>