force-app/main/default/objects/Hotel_Order__c/fields/Guest_Note__c.field-meta.xml
<CustomField>
    <fullName>Guest_Note__c</fullName>
    <label>Guest Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>