force-app/main/default/objects/Hotel_Order__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Hotel Order</relationshipLabel>
    <relationshipName>Hotel_Order</relationshipName>
    <type>Lookup</type>
</CustomField>