force-app/main/default/objects/Hotel_Order__c/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <label>Order Summary</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>