force-app/main/default/objects/Hotel_Order__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <label>Room Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>