force-app/main/default/objects/Hotel_Order__c/fields/Room_QTY__c.field-meta.xml
<CustomField>
    <fullName>Room_QTY__c</fullName>
    <label>Room QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>